--- a/trunk/clientv2/email/alerts.html
+++ b/trunk/clientv2/email/alerts.html
@@ -90,7 +90,7 @@
 												<table border="0" cellpadding="0" cellspacing="0">
 													<tr>
 														<td width="45">
-															<div style="background: #1e2171; padding: 3px 6px; font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #fff; text-align: center;">C6L</div>
+															<div style="background: #0e236b; padding: 3px 6px; font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #fff; text-align: center;">C6L</div>
 														</td>
 														<td width="12"><img src="_images/spacer.gif" width="12" height="1" alt=""></td>
 														<td width="270">
@@ -118,7 +118,7 @@
 												<table border="0" cellpadding="0" cellspacing="0">
 													<tr>
 														<td width="45">
-															<div style="background: #1e2171; padding: 3px 6px; font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #fff; text-align: center;">T14</div>
+															<div style="background: #0e236b; padding: 3px 6px; font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #fff; text-align: center;">T14</div>
 														</td>
 														<td width="12"><img src="_images/spacer.gif" width="12" height="1" alt=""></td>
 														<td width="270">
