Updates based on design review

--- a/clientv2/sign-up.html
+++ b/clientv2/sign-up.html
@@ -48,7 +48,7 @@
 			<a class="button" data-bind="click:$root.startTrial, css: {'disabled-btn': (isFormValid() == undefined || termsConditions() == false || errors().length)}">Start free trial</a>
 		</div>
 		<footer>
-			<span class="left">Learn more about <a data-bind="siteLink:'premium'">StockFacts Premium</a></span>
+			<span class="left"><a data-bind="siteLink:'premium'">Learn more about StockFacts Premium</a></span>
 			<span class="right">Have an account? <a data-bind="siteLink:'sign-in'">Sign in</a></span>
 		</footer>
 	</section>
