--- a/clientv2/email/confirm.html
+++ b/clientv2/email/confirm.html
@@ -31,13 +31,10 @@
 									<div style="text-align: center;">
 										<img src="https://s3.amazonaws.com/sgx.sharefc.com/email/_images/spacer.gif" width="1" height="25" alt="" />
 									</div>
-									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 23px; color: #0e236b; margin: 0 0 25px 0;">Please verify your StockFacts Premium account.</div>
-									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0; line-height: 125%;">Thank you for registering for a StockFacts Premium account. You will gain access to 
-									create and manage Watchlists/Alerts, additional companies and currencies, estimates and advanced charting, and real-time data (available with paid accounts).</div>
-									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0; line-height: 125%;">There's one more step to complete your registration. Confirming your account will 
-									give you access to StockFacts Premium and all future notifications will be sent to this email address.</div>
-									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0; line-height: 125%;">To access your account and get started select the button below.</div>
-									<div style="text-align: center;"><a th:href="@{http://sgx2.sharefc.com/iframe.html?page=13&amp;ref={token}(token=${token})}"><img src="https://s3.amazonaws.com/sgx.sharefc.com/email/_images/verify-email-address.gif" width="227" height="32" alt="Verify my email address" /></a></div>
+									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 23px; color: #0b236b; margin: 0 0 25px 0;">Password resetted</div>
+									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0;">Your password has been successfully reset.</div>
+									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0;"></div>
+									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0;"></div>
 									<div style="text-align: center;">
 										<img src="https://s3.amazonaws.com/sgx.sharefc.com/email/_images/spacer.gif" width="1" height="75" alt="" />
 									</div>
