--- a/trunk/clientv2/company-tearsheet.html
+++ b/trunk/clientv2/company-tearsheet.html
@@ -318,14 +318,14 @@
 			
 			<div class="section-break" data-bind="visible: hasGTIs($root)">
 				<div class="title">
-					<h5>Governance & Transparency Index (GTI) <img class="tooltip-left" width="11" height="11" data-bind="tooltip: 'gtiAbout'" alt="" src="img/info.jpg" /></h5>
+					<h5>Governance & Transparency Index (GTI) <img src="img/info.png" alt="" class="tooltip-left" data-bind="tooltip: 'gtiAbout'" /></h5>
 				</div>
 				<table cellspacing="0" width="100%">
 					<thead>
 						<tr class="odd">
-							<td width="40%">GTI Year</td>
-							<td width="30%">Rank <img src="img/info.png" alt="" class="tooltip-left" data-bind="tooltip: 'gtiRank'"/></td>
-							<td width="30%">Score <img src="img/info.png" alt="" class="tooltip-left" data-bind="tooltip: 'gtiScore'" /></td>
+							<td width="40%"><b>GTI Year</b></td>
+							<td width="30%"><b>Rank</b> <img src="img/info.png" alt="" class="tooltip-left" data-bind="tooltip: 'gtiRank'"/></td>
+							<td width="30%"><b>Score</b> <img src="img/info.png" alt="" class="tooltip-left" data-bind="tooltip: 'gtiScore'" /></td>
 						</tr>
 					</thead>
 					<tbody data-bind="foreach: $data.gtis.gtis">
@@ -336,7 +336,7 @@
 						</tr>
 					</tbody>
 				</table>
-				<div class="padded"><a target="_blank" href="http://bschool.nus.edu.sg/CGIO.aspx">Learn more about GTI <sup>&raquo;</sup></a></div>
+				<div class="padded odd learn-more"><b><a target="_blank" href="http://bschool.nus.edu.sg/CGIO.aspx">Learn more about GTI <sup>&raquo;</sup></a></b></div>
 			</div>
 		
 		</div>
