--- a/trunk/clientv2/sign-in.html
+++ b/trunk/clientv2/sign-in.html
@@ -25,6 +25,7 @@
 			<h2>StockFacts Premium</h2>
 		</header>
 		<div class="form sign-up">
+			<p class="message"></p>			
 			<input class="text" type="email" data-bind="value: email" placeholder="Email Address">
 			<input class="text" type="password" data-bind="value: password" placeholder="Password">
 			
