added button and changed copy text

--- a/clientv2/email/confirm.html
+++ b/clientv2/email/confirm.html
@@ -31,10 +31,11 @@
 									<div style="text-align: center;">
 										<img th:src="${baseUrl + '/email/_images/spacer.gif'}" width="1" height="25" alt="" />
 									</div>
-									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 23px; color: #0e236b; margin: 0 0 25px 0;">Password resetted</div>
-									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0;">Your password has been successfully reset.</div>
+									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 23px; color: #0e236b; margin: 0 0 25px 0;">Password Reset</div>
+									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0;">Your StockFacts Premium password has been successfully reset.</div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0;"></div>
 									<div style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #333; margin: 0 0 25px 0;"></div>
+									<div style="text-align: center;"><a th:href="${baseUrl + '/iframe.html'}"><img th:src="${baseUrl + '/email/_images/go-to-stockfacts.gif'}" width="227" height="32" alt="Go to SGX Stockfacts" /></a></div>
 									<div style="text-align: center;">
 										<img th:src="${baseUrl + '/email/_images/spacer.gif'}" width="1" height="75" alt="" />
 									</div>
