--- a/clientv2/index.html
+++ b/clientv2/index.html
@@ -184,7 +184,7 @@
 	
 	<!--  paging -->
 	<div class="pager" data-bind="visible: viewModel.pages() > 0">
-		<span class="action-btn right" data-bind="click: function() { viewModel.changePage(-1); }, visible: viewModel.page() > 1"><</span> Page <input type="text" value="1" data-bind="value: viewModel.page" /> of <span data-bind="text: viewModel.pages()"></span> <span class="action-btn" data-bind="visible: viewModel.page() < viewModel.pages(), click: function() { viewModel.changePage(+1); }, ">></span>
+		<span class="action-btn right" data-bind="click: viewModel.changePage(-1);, visible: viewModel.page() > 1"><</span> Page <input type="text" value="1" data-bind="value: viewModel.page" /> of <span data-bind="text: viewModel.pages()"></span> <span class="action-btn" data-bind="visible: viewModel.page() < viewModel.pages(), click: viewModel.changePage(+1);">></span>
 	</div>
 
 </div>
