--- a/trunk/clientv2/account-settings.html
+++ b/trunk/clientv2/account-settings.html
@@ -20,7 +20,7 @@
 
 <body style="width: auto;">
 	<section class="settings">
-		<h2>StockFacts Premium Account</h2>
+		<h1>StockFacts Premium Account</h1>
 		<p class="intro"><span class="content"></span> <span class="date" data-bind="value: subExpire, format: 'date'"></span> <a data-bind="siteLink: { id: 'index'}">Purchase a StockFacts Premium account now</a>.</p>
 		<div class="form">
 			<div class="form-wrapper">
@@ -53,17 +53,17 @@
 			</div>
 			<div class="form-wrapper">
 				<label>Receive Mailings</label>
-				<label class="mailings">Yes
-					<input type="radio" name="contactOptIn" data-bind="checked:contactOptIn, checkedValue: true">
+				<label class="mailings">
+					<input type="radio" name="contactOptIn" data-bind="checked:contactOptIn, checkedValue: true"> Yes
 				</label> 
-				<label class="mailings">No					
-					<input type="radio" name="contactOptIn" data-bind="checked:contactOptIn, checkedValue: false">
+				<label class="mailings">				
+					<input type="radio" name="contactOptIn" data-bind="checked:contactOptIn, checkedValue: false"> No	
 				</label>
 			</div>
-		</div>
-		<div style="text-align: center; margin: 15px 0;">
-			<a class="button" data-bind="click:$root.saveChanges, css: {'disabled-btn': (isFormValid() == false)}">Save changes</a>
-			<a class="cancel" data-bind="click:$root.cancel">CANCEL</a>
+			<div style="text-align: center; margin: 15px 0;">
+				<a class="button" data-bind="click:$root.saveChanges, css: {'disabled-btn': (isFormValid() == false)}">Save changes</a>
+				<a class="cancel" data-bind="click:$root.cancel">CANCEL</a>
+			</div>
 		</div>
 	</section>
 
